<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="mars_williams.tweetastic.activities.ReplyActivity">

    <Button
        android:id="@+id/btnCloseReply"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="@dimen/close_button_width"
        android:layout_height="@dimen/close_button_height"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/pill_filled"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/close"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnCloseReply"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tweet_compose_margin">

        <TextView
            android:id="@+id/tvReplyingTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etNewTweet"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:maxLines="@string/max_lines"
            android:minLines="@string/min_lines"
            android:text="@string/tweeter" />

        <ImageView
            android:id="@+id/ivReplyProfileImage"
            android:layout_width="@dimen/tweet_profile_image_width"
            android:layout_height="@dimen/tweet_profile_image_height"
            android:layout_below="@+id/tvReplyingTo"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/etNewTweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivReplyProfileImage"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/ivReplyProfileImage"
            android:autoLink="all"
            android:backgroundTint="@color/twitter_dark_gray"
            android:hint="@string/tweet_your_reply"
            android:inputType="textMultiLine"
            android:linksClickable="true"
            android:textColor="@color/twitter_dark_gray"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/tvCharacterCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etNewTweet"
            android:layout_below="@+id/etNewTweet"
            android:layout_marginTop="@dimen/tweet_character_count_margin"
            android:maxLength="140"
            android:text="@string/character_count"
            android:textColor="@color/twitter_light_gray" />

        <TextView
            android:id="@+id/tvCharactersRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvCharacterCount"
            android:layout_below="@+id/etNewTweet"
            android:layout_marginStart="@dimen/tweet_username_margin"
            android:layout_toEndOf="@+id/tvCharacterCount"
            android:text="@string/characters_remaining"
            android:textColor="@color/twitter_light_gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/btSubmitNewTweetReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/tweet_compose_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/pill_filled"
        android:text="@string/tweet"
        android:textColor="@android:color/white"
        android:textColorHint="@color/twitter_blue" />

</RelativeLayout>
