<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="mars_williams.tweetastic.activities.TweetDetailsActivity">

    <ImageView
        android:id="@+id/ivProfileImageDetails"
        android:layout_width="@dimen/tweet_profile_image_width"
        android:layout_height="@dimen/tweet_profile_image_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/tweet_button_margin"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/tvUserNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/details_margin"
        android:layout_toEndOf="@+id/ivProfileImageDetails"
        android:ellipsize="end"
        android:maxLines="@string/max_lines"
        android:minLines="@string/min_lines"
        android:text="@string/sample_tweeter"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScreenNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserNameDetails"
        android:layout_marginStart="@dimen/details_margin"
        android:layout_toEndOf="@+id/ivProfileImageDetails"
        android:ellipsize="end"
        android:maxLines="@string/max_lines"
        android:minLines="@string/min_lines"
        android:text="@string/tweeter" />

    <TextView
        android:id="@+id/tvTweetTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivProfileImageDetails"
        android:layout_marginStart="@dimen/tweet_button_margin"
        android:layout_marginTop="@dimen/details_margin"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/tweet_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/ivMediaImageDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTweetTextDetails"
        android:layout_margin="@dimen/details_margin" />

    <TextView
        android:id="@+id/tvTimeStampDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivMediaImageDetails"
        android:layout_marginStart="@dimen/tweet_button_margin"
        android:text="@string/at_time" />

    <View
        android:id="@+id/vDividerDetails1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/tvTimeStampDetails"
        android:layout_marginEnd="@dimen/details_margin"
        android:layout_marginStart="@dimen/details_margin"
        android:layout_marginTop="@dimen/details_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vDividerDetails1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumRetweetsDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tweet_button_margin"
            android:layout_marginTop="@dimen/details_margin"
            android:text="@string/num"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRetweetsDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_margin"
            android:text="@string/retweets" />

        <TextView
            android:id="@+id/tvNumFavoritesDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"
            android:text="@string/num"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFavoritesDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_margin"
            android:text="@string/favorites" />
    </LinearLayout>

    <View
        android:id="@+id/vDividerDetails2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/llCounts"
        android:layout_margin="@dimen/details_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/llButtonRowDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vDividerDetails2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibMessageDetails"
            android:layout_width="@dimen/tweet_button_width"
            android:layout_height="@dimen/tweet_button_height"
            android:layout_marginEnd="@dimen/tweet_button_margin"
            android:layout_marginStart="@dimen/tweet_button_margin"
            android:backgroundTint="@android:color/transparent"
            android:padding="0dp"
            android:src="@drawable/ic_no_comment" />

        <ImageButton
            android:id="@+id/ibRetweetDetails"
            android:layout_width="@dimen/tweet_button_width"
            android:layout_height="@dimen/tweet_button_height"
            android:layout_marginEnd="@dimen/tweet_button_margin"
            android:layout_marginStart="@dimen/tweet_button_margin"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_unretweet" />

        <ImageButton
            android:id="@+id/ibFavoriteDetails"
            android:layout_width="@dimen/tweet_button_width"
            android:layout_height="@dimen/tweet_button_height"
            android:layout_marginEnd="@dimen/tweet_button_margin"
            android:layout_marginStart="@dimen/tweet_button_margin"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_unfavorite" />

        <ImageButton
            android:id="@+id/ibDirectMessageDetails"
            android:layout_width="@dimen/tweet_button_width"
            android:layout_height="@dimen/tweet_button_height"
            android:layout_marginEnd="@dimen/tweet_button_margin"
            android:layout_marginStart="@dimen/tweet_button_margin"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_no_direct_message" />
    </LinearLayout>

    <View
        android:id="@+id/vDividerDetails3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/llButtonRowDetails"
        android:layout_marginEnd="@dimen/details_margin"
        android:layout_marginStart="@dimen/details_margin"
        android:layout_marginTop="@dimen/details_margin"
        android:background="@android:color/darker_gray" />

</RelativeLayout>
